<resources>
    <string name="app_name">levigoapp</string>
    <string name="button_label">Scan Barcode</string>
    <string name="inventory">Inventory</string>
    <string name="scan">SCAN</string>
    <string name="mask_label">Mask</string>
    <string name="levigo_label">Levigo</string>
    <string name="I_label">I am a:</string>
    <string name="admin_label">Admin</string>
    <string name="user_label">User</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="forgot_your_password_label">Forgot your password?</string>
    <string name="remember_me_label">Remember me</string>
    <string name="login_label">Login</string>
    <string name="register_label">Don\'t have an account? Register here</string>
    <string name="scan_from_fragment">SCAN FROM FRAGMENT</string>
    <string name="title_activity_tabbed_scanning">Add Inventory</string>
    <string name="hospital_lbl">Hospital</string>
    <string name="notes_lbl">Notes</string>
    <string name="additional_remarks_lbl">Additional Remarks</string>
    <string name="patient_id_label">Patient ID</string>
    <string name="patient_id_lbl">Patient ID</string>
    <string name="expiration_lbl">Expiration</string>
    <string name="cancel_lbl">Cancel</string>
    <string name="edit_item_lbl">Edit Item</string>
    <string name="add_edit_fields_lbl">add/edit fields</string>
    <string name="save_lbl">Save</string>
    <string name="barcode_lbl">Barcode</string>
    <string name="equipment_name_lbl">Equipment Name</string>
    <string name="procedure_name_lbl">Procedure Name</string>
    <string name="procedure_date_label">Procedure Date</string>
    <string name="procedure_lbl">Procedure</string>
    <string name="equipment_type_lbl">Equipment Type</string>
    <string name="equipment_manufacturer_lbl">Equipment Manufacturer</string>
    <string name="manufacturer_lbl">Manufacturer</string>
    <string name="title_label">Title</string>
    <string name="item_detail_label">Item Detail</string>
    <string name="subheader_label">Enter or edit item information</string>
    <string name="barcode_label">Barcode</string>
    <string name="name_lbl">Name</string>
    <string name="type_lbl">Type</string>
    <string name="company_lbl">Company</string>
    <string name="item_used_label">Item used?</string>
    <string name="number_used_lbl">Number used</string>
    <string name="expiration_date_lbl">Expiration Date</string>
    <string name="lot_number_lbl">Lot number</string>
    <string name="quantity_lbl">Quantity</string>
    <string name="site_location_lbl">Site location</string>
    <string name="dateTime_label">Current date and time</string>
    <string name="product_id_lbl">Product ID</string>
    <string name="save_changes_lbl">Save changes</string>
    <string name="rescan_items_lbl">Rescan items</string>
    <string name="number_added_lbl">Number added</string>
    <string name="SingleUse_lbl">Single Use</string>
    <string name="reusable_lbl">Reusable</string>
    <string name="addID_lbl">Add patient ID</string>
    <string name="removeID_lbl">Remove patient ID</string>
    <string name="topView_label">Select the sites you want to view inventory for:</string>
    <string name="search_label">Search</string>
    <string name="sort_label">Sort by</string>
    <string name="sort_by_label">Sort by</string>
    <string name="all_sites_label">All sites</string>
    <string name="option_a_label">Option a</string>
    <string name="option_b_label">Option b</string>
    <string name="exit_lbl">Exit to Inventory View</string>
    <string name="otherType_lbl">Enter equipment type</string>
    <string name="enter_procedure_lbl">Enter Procedure</string>
    <string name="enter_procedure_date_lbl">Enter Procedure Date</string>
    <string name="enter_patient_id_lbl">Enter Patient ID</string>
    <string name="enter_amount_used_lbl">Enter Amount Used</string>
    <string name="number_added_label">Number Added</string>
    <string name="device_identifier_lbl">Device Identifier</string>
    <string name="lot_number_label">Lot Number</string>
    <string name="submitLocation_lbl">Submit physical location</string>
    <string name="submitSite_lbl">Submit site</string>
    <string name="specifications_label">Specifications</string>
    <string name="udi_barcode_lbl">UDI/Barcode</string>
    <string name="time_in_lbl">Time In</string>
    <string name="date_in_lbl">Date In</string>
    <string name="autopopulate_lbl">Autopopulate</string>
    <string name="add_patient_id_lbl">Add Patient ID</string>
    <string name="physical_location_lbl">Physical Location</string>
    <string name="add_size_field_lbl">Add Size Field</string>
    <string name="site_location_label">Site Location</string>
    <string name="reference_number_lbl">Reference Number</string>
    <string name="medical_speciality_lbl">Medical Speciality</string>
    <string name="remove_patient_id_lbl">Remove Patient ID</string>
    <string name="device_description_lbl">Device Description</string>
    <string name="back_button_lbl">back_button</string>
    <string name="removeSize_label">Remove size field</string>
    <string name="setButton_label">Set</string>
    <string name="cancelButton_label">Cancel</string>
    <string name="type_of_equipment">Type of Equipment</string>
    <string name="add_procedure_info_lbl">Add Procedure Info</string>
    <string name="remove_procedure_info_lbl">Remove Procedure Info</string>
    <string name="usage_label">Usage</string>
    <string name="name_label">Name</string>
    <string name="choose_site_label">Choose site</string>
    <string name="choose_location_lbl">Choose location</string>
    <string name="choose_type_lbl">Choose type</string>
    <string name="procedureName_lbl">Procedure Name</string>
    <string name="procedureTime_lbl">Procedure Time</string>
    <string name="AccessionNumber_lbl">Accession Number</string>
    <string name="itemsUsed_lbl">Number of Items Used</string>
    <string name="procedureDate_lbl">Procedure Date</string>
    <string name="item_name_product_description_label">Item Name Product Description</string>
    <string name="barcode_udi_label">Barcode | UDI</string>
    <string name="device_identifier_label">Device Identifier</string>
    <string name="quantity_label">Quantity</string>
    <string name="expiration_label">Expiration</string>
    <string name="hospital_name_label">Hospital Name</string>
    <string name="physical_location_label">Physical Location</string>
    <string name="type_label">Type</string>
    <string name="medical_specialty_label">Medical Specialty</string>
    <string name="device_description_label">Device Description</string>
    <string name="reference_number_label">Reference Number</string>
    <string name="manufacturer_company_label">Manufacturer Company</string>
    <string name="last_update_label">Last Update</string>
    <string name="notes_label">Notes</string>
    <string name="specification_label">Specification</string>
    <string name="procedureTimeIn_label">Procedure time in</string>
    <string name="procedureTimeOut_label">Procedure time out</string>
    <string name="FloorTimeLabel">Floor time</string>

</resources>
